--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,13 @@ python = "^3.9"
 twitchio = "^2.5.0"
 deepl = "^1.11.0"
 pywin32 = "^305"
-# soundcard = "*"
-numpy = "^1.24.0"
+numpy = "^1.23.1"
 soundcard = "^0.4.2"
+whisper = {git = "https://github.com/openai/whisper.git"}
+torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.1%2Bcu113-cp39-cp39-win_amd64.whl"}
+transformers = "^4.24.0"
+ffmpeg = "^1.4"
+tqdm = "^4.64.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
