--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,17 @@ tqdm = "^4.64.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 flake8 = "^6.0.0"
+black = "^22.12.0"
+mypy = "^0.991"
+nox = "^2022.11.21"
+nox-poetry = "^1.0.2"
+pyproject-flake8 = "^6.0.0.post1"
+
+[tool.flake8]
+exclude = [
+    ".venv",
+    ".nox"
+]
 
 [build-system]
 requires = ["poetry-core"]
