--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.1%2Bcu113-cp39
 transformers = "^4.24.0"
 ffmpeg = "^1.4"
 tqdm = "^4.64.1"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
